# GruutSCE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: rcc_qp.hpp
src/: config.hpp  engine.cpp  engine.hpp
src/chain/: block.hpp  certificate.hpp  endorser.hpp  signature.hpp  transaction.hpp
src/condition/: base_condition_handler.hpp  condition.cpp  condition.hpp  condition_handler.hpp  condition_manager.hpp  handler_certificate.hpp  handler_compare.hpp  handler_endorser.hpp  handler_receiver.hpp  handler_signature.hpp  handler_time.hpp  handler_user.hpp  handler_var.hpp  tag_handler.hpp
src/config/: config.hpp  types.hpp
src/data/: data_collector.hpp  data_manager.hpp  data_storage.hpp  datamap.hpp  temp_data_collector.hpp
src/datamap/: datamap.cpp  datamap.hpp
src/handler/: fee_handler.hpp  get_handler.hpp  input_handler.hpp  set_handler.hpp
src/runner/: contract_manager.hpp  contract_runner.hpp  element_parser.hpp  query_composer.hpp  tx_parallelizer.hpp
src/util/: misc_tool.hpp  vs_tool.hpp
src/utils/: bytes_builder.hpp  json.hpp  misc_tool.hpp  pugixml_tool.hpp  sha256.hpp  type_converter.hpp
test/: component_test.cpp  dummy_storage.hpp  main.cpp  rccqp_test.cpp  runner_test.cpp
